fixed alignment on phone view

--- a/style.css
+++ b/style.css
@@ -240,3 +240,16 @@ body.light-mode .profile-pic {
 .fade-wrapper.fade-out {
   opacity: 0;
 }
+
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
+.container, .link, .link-content, .icon-container {
+  max-width: 100%;
+  overflow-x: hidden;
+}
